Backport of some bugfixes: * configure.ac checks availability of gettimeofday * oct_f.c checks HAVE_GETTIMEOFDAY macro instead of linux macro * correct upper case name of a function

--- a/configure.ac
+++ b/configure.ac
@@ -47,7 +47,7 @@ AC_C_CONST
 
 # Checks for library functions.
 AC_FUNC_SETVBUF_REVERSED
-AC_CHECK_FUNCS([sqrt strcasecmp strdup tcgetpgrp])
+AC_CHECK_FUNCS([sqrt strcasecmp strdup tcgetpgrp gettimeofday])
 
 # Checks for size of pointer
 ACX_POINTER_SIZE
