--- a/configure.ac
+++ b/configure.ac
@@ -220,7 +220,7 @@ AC_SUBST(FCDEBUGFLAGS)
 AC_CONFIG_FILES([Makefile 
   external_libs/Makefile external_libs/expokit/Makefile external_libs/metis-4.0/Makefile  external_libs/qshep/Makefile
 	liboct_parser/Makefile liboct/Makefile libxc/Makefile src/Makefile doc/Makefile
-	doc/pdf/Makefile doc/html/Makefile share/Makefile share/PP/Makefile share/PP/TM2/Makefile share/PP/HGH/Makefile
+	doc/html/Makefile share/Makefile share/PP/Makefile share/PP/TM2/Makefile share/PP/HGH/Makefile
 	share/recipes/Makefile share/recipes/en/Makefile share/recipes/es/Makefile 
 	share/recipes/it/Makefile share/util/Makefile share/samples/Makefile
 	build/octopus.spec testsuite/Makefile testsuite/finite_systems_1d/Makefile 
