(*) My "autoreconf" was failing in my machine for 2.1.x     This probably is not a problem since what matters is that     the distribution works. However, it is nice that everything     can be built from scratch.
    The reason was that something called "docdir" was missing.
    It shoule point to the place where, for example, octopus.pdf
    is placed.

(*) The manual "octopus.pdf" should be distributed. If it is not
    present, the dependency that builds it is a wget that retrieves
    it from the web page (I did not know that ;)
    However, if wget is not installed, or the web page is down,
    the build fails. I think that this should not happen; the whole
    build procedure should not depend on those two uncertainties.
    Of course for those who get the distribution, in principle
    octopus.pdf is there and it does not matter; but with "make"
    one never know, sometimes it gets confused with the dates
    and tries to rebuild everything. So if octopus.pdf cannot
    be retrieved, the build should continue nevertheless.

I have fixed those two issues; however, since we are in a very
critical stage please, those of you who can, review my changes!
I might have screwed up rather than helping.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -6,6 +6,7 @@ man_MANS = octopus.1 oct-atomic_occupations.1 oct-broad.1 oct-center-geom.1 oct-
         oct-display_partitions.1 oct-harmonic-spectrum.1 oct-ph.1 oct-rsf.1 \
 	oct-run_periodic_table.1 oct-run_regression_test.pl.1 oct-run_testsuite.1 oct-xyz-anim.1
 
+docdir = $(pkgdatadir)/doc
 dist_doc_DATA = octopus.pdf
 
 EXTRA_DIST = *.pod img/*.eps img/*.jpg $(man_MANS)
@@ -16,4 +17,5 @@ CLEANFILES = *~ *.bak $(man_MANS)
 	pod2man -c "octopus documentation" -s 1 $< > $@
 
 octopus.pdf:
-	wget "http://www.tddft.org/programs/octopus/wiki/index.php?title=Special:PdfPrint&page=The_Octopus_Manual" -O $@
+	@wget "http://www.tddft.org/programs/octopus/wiki/index.php?title=Special:PdfPrint&page=The_Octopus_Manual" -O $@ \
+	|| echo "Could not obtain the manual from http://www.tddft.org/. octopus.pdf will not be installed."
